src/test/deca/context/valid/operation-binaire-minus.deca
// Description:
//    operation binaire minus
//
// Resultats:
//    
//
// Historique:
//    cree le 06/01/2023

{
    2-1;
}